--- a/AutoBattle/AutoBattle/AutoBattle.csproj
+++ b/AutoBattle/AutoBattle/AutoBattle.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
